--- a/CSS/Why.css
+++ b/CSS/Why.css
@@ -17,6 +17,11 @@ body{
     height: auto;
     background-color: var(--30-color);
 }
+#First-Section:hover{
+    width: 200%;
+    height: auto;
+    background-color: var(--30-color);
+}
 .container{
     padding-bottom: 2.5%;
 }
