--- a/CSS/Why.css
+++ b/CSS/Why.css
@@ -18,7 +18,7 @@ body{
     background-color: var(--30-color);
       transition: all .3s;
 }
-#First-Section:hover{
+.container img{
 transform: scale(1.1);
 }
 .container{
